test/cli/test-legacy-policies/legacy-clusterpolicy/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.21
