test/cli/test-legacy-policies/legacy-clusterpolicy/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - good-pod
  result: pass
  rule: validate-image-tag
